# documint

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  app.py  config.py
src/agents/: __init__.py  analyzer.py  generator.py  quality_checker.py  researcher.py  state.py  workflow.py
src/tools/: __init__.py  fetcher.py  markdown_utils.py
src/utils/: __init__.py  json_parser.py  logger.py
tests/: test_fetcher.py  test_json_parser.py  test_workflow.py
